valobj/tests/ui/tuple/tuple_ctor_test.rs
#[valobj::value_object]
pub struct UserId(u64);

fn main() {
    let value = UserId(0);
}
